--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Código do Phaser -->
 	<script type="text/javascript" src="js/phaser.min.js"></script>
     <!-- Códigos do jogo -->
+    <script type="text/javascript" src="js/boot.js"></script>
+    <script type="text/javascript" src="js/start.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/win.js"></script>
     <script type="text/javascript" src="js/lose.js"></script>
