--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <html>
+
 <head>
-	<title>Phaser</title>
-	<!-- Estilo da pagina -->
-	<link rel="stylesheet" href="css/main.css">
+    <title>Phaser</title>
+    <!-- Estilo da pagina -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-	<h1 class="title">Tiled template</h1>
+    <h1 class="title">Tiled template</h1>
     <!-- Código do Phaser -->
-	<script type="text/javascript" src="js/phaser.min.js"></script>
+    <script type="text/javascript" src="js/phaser.min.js"></script>
     <!-- Códigos do jogo -->
+    
+    <script type="text/javascript" src="js/controllers/collisionController.js"></script>
+
+    <script type="text/javascript" src="js/controllers/playerController.js"></script>
+    <script type="text/javascript" src="js/controllers/cameraController.js"></script>
 
     <script type="text/javascript" src="js/boot.js"></script>
     <script type="text/javascript" src="js/start.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/win.js"></script>
     <script type="text/javascript" src="js/lose.js"></script>
-        <script type="text/javascript" src="js/playerController.js"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
-    
+
     <!-- Local onde o Phaser vai criar o canvas -->
     <div id="phaser-canvas"></div>
 </body>
+
 </html>
