adicao de novas funcionalidades e nova fase

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Phaser</title>
     <!-- Estilo da pagina -->
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <!-- Código do Phaser -->
     <script type="text/javascript" src="js/phaser.min.js"></script>
     <!-- Códigos do jogo -->
-    
+    <script type="text/javascript" src="js/controllers/pauseController.js"></script>
     <script type="text/javascript" src="js/controllers/collisionController.js"></script>
 
     <script type="text/javascript" src="js/controllers/playerController.js"></script>
