--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 class="title">Tiled template</h1>
+   
     <!-- Código do Phaser -->
     <script type="text/javascript" src="js/phaser.min.js"></script>
     <!-- Códigos do jogo -->
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/win.js"></script>
     <script type="text/javascript" src="js/lose.js"></script>
+    <script type="text/javascript" src="js/credits.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
 
