ajuste na fonte

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Phaser</title>
     <!-- Estilo da pagina -->
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <meta charset="UTF8">
 </head>
 
 <body>
